<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_menu_home"
        android:icon="@drawable/nav_ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_menu_today"
        android:icon="@drawable/nav_ic_today"
        android:title="@string/daily"
        />


    <item
        android:id="@+id/nav_menu_monthly"
        android:icon="@drawable/nav_ic_month"
        android:title="@string/monthly"
        />

    <item
        android:id="@+id/nav_menu_yearly"
        android:icon="@drawable/nav_ic_year"
        android:title="@string/yearly"
        />
    </group>

    <item
        android:id="@+id/nav_menu_settings"
        android:icon="@drawable/nav_ic_settings"
        android:title="@string/settings" />

</menu>
